@@ -178,14 +178,8 @@ override_dh_clean:
 	rm -rf $$(find -name Makefile.in)
 	rm -rf bin/install-sh bin/ltmain.sh
 	for file in debian/*.in; do rm -f $${file%%.in}; done
-	rm -rf src/amd/compiler/__pycache__/ src/amd/registers/__pycache__
-	rm -rf src/amd/vulkan/*.pyc src/amd/vulkan/__pycache__/
-	rm -rf src/compiler/nir/*.pyc src/compiler/nir/__pycache__/
-	rm -rf src/egl/generate/*.pyc src/egl/generate/__pycache__/
-	rm -rf src/gallium/auxiliary/util/*.pyc src/gallium/auxiliary/util/__pycache__/
-	rm -rf src/intel/vulkan/*.pyc src/intel/vulkan/__pycache__/
-	rm -rf src/mapi/glapi/gen/*.pyc src/mapi/glapi/gen/__pycache__/ src/mapi/new/__pycache__/
-	rm -rf src/mesa/main/*.pyc src/mesa/main/__pycache__/
+	find -name '*.pyc' -delete
+	find -name '__pycache__' -delete
 	dh_clean
 
 override_dh_auto_configure:
