@@ -1,6 +1,7 @@
 mesa (22.1.0~rc3-1) UNRELEASED; urgency=medium
 
   * New upstream release candidate.
+  * rules: Clean all python build cruft.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Sun, 10 Apr 2022 10:54:07 +0300
 
